test/files/invalid/enum_without_type.stderr
error: Enum declarations must have a representation-type
  ┌─ test/files/invalid/enum_without_type.fbs:1:9
  │
1 │ enum Foo { X = 0 }
  │         ^
  │         │
  │         Type should be inserted here
  │         Hint: Try inserting `: [integer type]`

